cluster/service/production/couchdb/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "2"
  name: couchdb
  namespace: couchdb
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: home-gateway
      namespace: gateway-system
      sectionName: https
  hostnames:
    - obsidian-sync.home.lan
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: couchdb-svc-couchdb
          port: 5984
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
